feat: implement multi-tenant isolation, enhance security configuration, and standardize backend architecture via new DTOs and filters